--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -33,6 +33,7 @@
     
     {% block extra_js %}
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    {% load static %}
     <script src="{% static 'js/script.js' %}" type="module"></script>
     {% endblock %}
 </body>
