updata login + logout and other

--- a/main/templates/main/partials/kpi_cards.html
+++ b/main/templates/main/partials/kpi_cards.html
@@ -8,11 +8,13 @@
   <!-- dashboard.html -->
   <div class="bg-white rounded-xl shadow-lg overflow-hidden">
     <div
-      class="grid grid-cols-4 bg-gradient-to-r from-indigo-500 to-purple-700 text-white p-4">
+      class="grid grid-cols-5 bg-gradient-to-r from-indigo-500 to-purple-700 text-white p-4"
+    >
       <div class="text-center font-semibold">หมวดหมู่</div>
       <div class="text-center font-semibold">ยอดขาย</div>
       <div class="text-center font-semibold">กำไร</div>
       <div class="text-center font-semibold">อัตราการเติบโต</div>
+      <div class="text-center font-semibold">รวม lang</div>
     </div>
 
     <div class="divide-y divide-gray-200">
