--- a/main/templates/main/partials/analysis_actions.html
+++ b/main/templates/main/partials/analysis_actions.html
@@ -1,40 +1,16 @@
 <div id="Analysis_Actions" class="rounded-lg shadow-md p-6 m-10 bg-white">
     <div class="flex justify-between">
         <h2 class="text-lg font-semibold text-gray-900 mb-4">Analysis Actions</h2>
-        <div class="relative inline-block text-left">
-            <div>
-                <button id="dropdownBtn" type="button" class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-xs ring-1 ring-gray-300 ring-inset hover:bg-gray-50" id="menu-button" aria-expanded="true" aria-haspopup="true">
-                Filter
-                <svg class="-mr-1 size-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" data-slot="icon">
-                    <path fill-rule="evenodd" d="M5.22 8.22a.75.75 0 0 1 1.06 0L10 11.94l3.72-3.72a.75.75 0 1 1 1.06 1.06l-4.25 4.25a.75.75 0 0 1-1.06 0L5.22 9.28a.75.75 0 0 1 0-1.06Z" clip-rule="evenodd" />
-                </svg>
-                </button>
-            </div>
 
-            <!--
-                Dropdown menu, show/hide based on menu state.
-
-                Entering: "transition ease-out duration-100"
-                From: "transform opacity-0 scale-95"
-                To: "transform opacity-100 scale-100"
-                Leaving: "transition ease-in duration-75"
-                From: "transform opacity-100 scale-100"
-                To: "transform opacity-0 scale-95"
-            -->
-            <div id="dropdownMenu" class="absolute right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black/5 focus:outline-hidden hidden" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
-                <div class="py-1" role="none">
-                <!-- Active: "bg-gray-100 text-gray-900 outline-hidden", Not Active: "text-gray-700" -->
-                <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="menu-item-0">Account settings</a>
-                <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="menu-item-1">Support</a>
-                <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="menu-item-2">License</a>
-                <form method="POST" action="#" role="none">
-                    <button type="submit" class="block w-full px-4 py-2 text-left text-sm text-gray-700" role="menuitem" tabindex="-1" id="menu-item-3">Sign out</button>
-                </form>
-                </div>
-            </div>
-            </div>
+        <div class="outline-red-500">
+            <input 
+                class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 cursor-pointer" 
+                type="text" name="daterange" placeholder="เลือกวันที่" />
+        </div>
+        
 
     </div>
+    <br>
     <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-6 gap-4">
         {% for action in analysis_actions %}
             <button
@@ -46,4 +22,29 @@
             </button>
         {% endfor %}
     </div>
+    <div
+    id="myModal"
+    class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50"
+    >
+    <div class="bg-white rounded-lg shadow-lg max-w-md w-full p-6 relative">
+        <!-- ปุ่มปิด -->
+        <button id="closeModal" class="absolute top-2 right-2 text-gray-500 hover:text-red-500 text-2xl font-bold">&times;</button>
+
+        <h2 class="text-xl font-semibold mb-4">Web commerce</h2>
+        <div class="mb-4">
+            <input
+                type="text"
+                id="name"
+                name="name"
+                placeholder="กรอก Web commerce"
+                class="w-full rounded border border-gray-300 px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
+            />
+        </div>
+
+        <button id="ok" class="mt-2 px-4 py-2 bg-green-500 text-white rounded hover:bg-green-600">
+        ตกลง
+        </button>
+    </div>
+    </div>
+
 </div>
