updata filter date more type button

--- a/main/templates/main/partials/analysis_actions.html
+++ b/main/templates/main/partials/analysis_actions.html
@@ -1,11 +1,24 @@
 <div id="Analysis_Actions" class="rounded-lg shadow-md p-6 m-10 bg-white">
     <div class="flex justify-between">
         <h2 class="text-lg font-semibold text-gray-900 mb-4">Analysis Actions</h2>
-
-        <div class="outline-red-500">
-            <input 
-                class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 cursor-pointer" 
-                type="text" name="daterange" placeholder="เลือกวันที่" />
+        <div>
+            <label for="toggle-basic" class="relative flex items-center cursor-pointer">
+            <!-- Hidden checkbox input for accessibility and state management -->
+            <input type="checkbox" id="toggle-basic" class="sr-only peer">
+            <!-- Visual representation of the toggle switch -->
+            <div class="w-11 h-6 bg-slate-300 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 rounded-full peer peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:rounded-full after:h-5 after:w-5 after:transition-all duration-300 peer-checked:bg-blue-600"></div>
+            </label>
+            <div class="flex outline-red-500">
+                <input 
+                    class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 cursor-pointer" 
+                    type="text" name="daterange" placeholder="เลือกวันที่" />
+            </div>
+            <br>
+            <div class="outline-red-500">
+                <input 
+                    class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 cursor-pointer" 
+                    type="text" name="daterange" placeholder="เลือกวันที่" />
+            </div>
         </div>
         
 
