add compare toggle data

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -38,7 +38,7 @@
 
     <div id="col2" class="bg=[#f7f9fa] w-full h-screen">
         <div id="wealcomeData"
-            class="h-screen flex-1 flex items-center justify-center bg-gradient-to-br from-indigo-500 to-purple-700 text-white">
+            class="h-screen flex-1 flex items-center justify-center bg-gradient-to-br from-purple-700 to-purple-900 text-white">
             <div class="text-center max-w-lg">
                 <div class="w-30 h-30 bg-white bg-opacity-10 rounded-full flex items-center justify-center mx-auto mb-6 text-5xl backdrop-blur-md">
                     🗂️</div>
