--- a/main/templates/main/partials/analysis_actions.html
+++ b/main/templates/main/partials/analysis_actions.html
@@ -1,6 +1,8 @@
 <div id="Analysis_Actions" class="rounded-lg shadow-md p-6 m-10 bg-white">
     <div class="flex justify-between">
-        <h2 class="text-lg font-semibold text-gray-900 mb-4">Analysis Actions</h2>
+        <div class="content-center">
+            <h2 id="title" class=" font-semibold text-black rounded-lg pr-4 pl-4 pt-2 pb-2 border-2 bg-gray-200">Actions</h2>
+        </div>
         <div class="flex gap-6">
             <div class="flex pt-3">
                 <label class="relative flex cursor-pointer">
