fix bug layout table column

--- a/main/templates/main/partials/kpi_cards.html
+++ b/main/templates/main/partials/kpi_cards.html
@@ -16,18 +16,16 @@
     <div class="divide-y divide-gray-200" id="data-rows">
       <!-- data rows จะเติมด้วย JS -->
     </div>
-
-
-
-
-    <div class="grid grid-cols-6 bg-gradient-to-r from-indigo-500 to-purple-700 text-white p-4" id="header-row-compare">
-      <!-- header columns จะเติมด้วย JS -->
-    </div>
-
-    <!-- Data rows -->
-    <div class="divide-y divide-gray-200" id="data-rows-compare">
-      <!-- data rows จะเติมด้วย JS -->
-    </div>
   </div>
+
+
+  <br>
+  <br>
+  <div id="table-3" class="w-1/2 overflow-hidden rounded-xl shadow-lg">
+    <div id="t3-header"></div>
+    <div id="t3-row"></div>
+  </div>
+
+  
 
 </div>
