refactor fetchapi.js to OOP soild

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -39,6 +39,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- {% load static %} -->
     <script src="{% static 'js/script.js' %}" type="module"></script>
+    <!-- <script src="{% static 'js/fetchDate/Appfetch.js' %}" type="module"></script> -->
     {% endblock %}
 </body>
 </html>
