--- a/main/templates/main/partials/analysis_actions.html
+++ b/main/templates/main/partials/analysis_actions.html
@@ -50,13 +50,25 @@
 
         <h2 class="text-xl font-semibold mb-4">Web commerce</h2>
         <div class="mb-4">
+            <span>ข้อมูลชุดแรก</span>
             <input
                 type="text"
-                id="name"
+                id="webcom1_i"
                 name="name"
                 placeholder="กรอก Web commerce"
-                class="w-full rounded border border-gray-300 px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
+                class="w-full rounded border border-emerald-400 px-4 py-2 focus:outline-none focus:ring-2 focus:ring-emerald-400"
             />
+            <div id="web-tag2" class="hidden">
+                <span>ข้อมูลชุดสอง</span>
+                <input
+                    type="text"
+                    id="webcom2_i"
+                    name="name"
+                    placeholder="กรอก Web commerce"
+                    class="w-full rounded border border-emerald-400 px-4 py-2 focus:outline-none focus:ring-2 focus:ring-emerald-400"
+                />
+            </div>
+            
         </div>
 
         <button id="ok" class="mt-2 px-4 py-2 bg-green-500 text-white rounded hover:bg-green-600">
