--- a/main/templates/main/partials/charts.html
+++ b/main/templates/main/partials/charts.html
@@ -9,7 +9,7 @@
         <canvas id="barChartHorizontal"></canvas>
          <!-- <div class="bg-black rounded-xl shadow-xl p-6 h-30"></div> -->
     </div>
-    <div id="piechart" class="bg-white rounded-xl shadow-xl p-6">
+    <div id="piechart" class="hidden bg-white rounded-xl shadow-xl p-6">
         <h3 class="text-xl font-bold text-gray-800 mb-4">Pie chart</h3>
         <canvas id="myPieChart" height="300"></canvas>
     </div>
