--- a/main/templates/main/partials/charts.html
+++ b/main/templates/main/partials/charts.html
@@ -1,11 +1,11 @@
 <div id="showchart" class="hidden grid grid-cols-3 gap-8 m-10">  
     <div class="bg-white rounded-xl shadow-xl p-6">
-        <h3 class="text-xl font-bold text-gray-800 mb-4">bar chart</h3>
+        <h3 id="titlechart" class="text-xl font-bold text-gray-800 mb-4">bar chart</h3>
         <canvas id="barChart"></canvas>
          <!-- <div class="bg-black rounded-xl shadow-xl p-6 h-30"></div> -->
     </div>
     <div id="barHorizontal" class="hidden bg-white rounded-xl shadow-xl p-6" >
-        <h3 class="text-xl font-bold text-gray-800 mb-4">bar chart</h3>
+        <h3 id="titlechart2" class="text-xl font-bold text-gray-800 mb-4">bar chart</h3>
         <canvas id="barChartHorizontal"></canvas>
          <!-- <div class="bg-black rounded-xl shadow-xl p-6 h-30"></div> -->
     </div>
