--- a/main/templates/main/partials/kpi_cards.html
+++ b/main/templates/main/partials/kpi_cards.html
@@ -1,12 +1,12 @@
 <div id="showcards" class="m-10">
 
   <div class="text-center mb-6">
-    <p class="text-gray-500 text-sm mt-4">
-      ข้อมูลนี้แสดงยอดขายและกำไรตามหมวดหมู่สินค้าในไตรมาสล่าสุด
-    </p>
+    <h1 class="text-gray-500">
+      กดเลือกวันที่ และ กดปุ่มคํานวณ
+    </h1>
   </div>
-  <!-- dashboard.html -->
-  <div class="bg-white rounded-xl shadow-lg overflow-hidden">
+  <!-- dashboard.html --> 
+  <div id="frame-table" class="hidden bg-white rounded-xl shadow-lg overflow-hidden">
     <!-- Header -->
     <div class="grid grid-cols-6 bg-gradient-to-r from-indigo-500 to-purple-700 text-white p-4" id="header-row">
       <!-- header columns จะเติมด้วย JS -->
