--- a/main/templates/main/test.html
+++ b/main/templates/main/test.html
@@ -51,7 +51,7 @@
                 <div class="text-sm">ลากไฟล์มาวางหรือคลิกเพื่ออัปโหลด</div>
             </div>
             
-            <div id="fileItems" class="space-y-3 hidden">
+            <div id="fileItems" class="space-y-3 hidden max-h-screen overflow-y-auto pr-2">
                 <!-- ไฟล์จะแสดงที่นี่ -->
             </div>
         </div>
