--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -39,7 +39,7 @@
             {% include 'main/test.html' %}
 
             <div class="p-4 border-t border-gray-200 bg-gray-50 text-center text-xs text-gray-500">
-                <div class="footer-text">รองรับไฟล์ทุกประเภท</div>
+                <div class="footer-text">รองรับไฟล์ Excel, CSV</div>
             </div>
         </div>
     </div>
@@ -56,7 +56,7 @@
 
     <div id="col2" class="bg=[#f7f9fa] w-full h-screen">
         <div id="wealcomeData"
-            class="hidden h-screen flex-1 flex items-center justify-center bg-gradient-to-br from-purple-700 to-purple-900 text-white">
+            class="h-screen flex-1 flex items-center justify-center bg-gradient-to-br from-purple-700 to-purple-900 text-white">
             <div class="text-center max-w-lg">
                 <div class="w-30 h-30 bg-white bg-opacity-10 rounded-full flex items-center justify-center mx-auto mb-6 text-5xl backdrop-blur-md">
                     🗂️</div>
@@ -67,7 +67,7 @@
                 </p>
             </div>
         </div>
-        <div id="contentAnalysis" class="">
+        <div id="contentAnalysis" class="hidden">
 
             {% include 'auth/logout.html' %}
             <!-- Analysis Actions -->
