add func map spit date

--- a/main/templates/main/partials/charts.html
+++ b/main/templates/main/partials/charts.html
@@ -11,6 +11,6 @@
     </div>
     <div id="piechart" class="hidden bg-white rounded-xl shadow-xl p-6">
         <h3 class="text-xl font-bold text-gray-800 mb-4">Pie chart</h3>
-        <canvas id="myPieChart" height="300"></canvas>
+        <canvas id="mylineChart" height="300"></canvas>
     </div>
 </div>
