--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% block title %}File Manager{% endblock %}</title>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <title>{% block title %}📁 File Manager{% endblock %}</title>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
