New graph improvements

--- a/main/templates/main/partials/charts.html
+++ b/main/templates/main/partials/charts.html
@@ -1,16 +1,17 @@
 <div id="showchart" class="hidden grid grid-cols-3 gap-8 m-10">  
-    <div class="bg-white rounded-xl shadow-xl p-6">
+    <div class="bg-white rounded-xl shadow-xl p-6 w-full h-96">
         <h3 id="titlechart" class="text-xl font-bold text-gray-800 mb-4">bar chart</h3>
         <canvas id="barChart"></canvas>
+        <br>
          <!-- <div class="bg-black rounded-xl shadow-xl p-6 h-30"></div> -->
     </div>
-    <div id="barHorizontal" class="hidden bg-white rounded-xl shadow-xl p-6" >
+    <div id="barHorizontal" class="hidden bg-white rounded-xl shadow-xl p-6 h-96" >
         <h3 id="titlechart2" class="text-xl font-bold text-gray-800 mb-4">bar chart</h3>
         <canvas id="barChartHorizontal"></canvas>
          <!-- <div class="bg-black rounded-xl shadow-xl p-6 h-30"></div> -->
-    </div>
-    <div id="piechart" class="hidden bg-white rounded-xl shadow-xl p-6">
+    </div>  
+    <div id="piechart" class="hidden bg-white rounded-xl shadow-xl p-6 w-full h-96">
         <h3 class="text-xl font-bold text-gray-800 mb-4">Pie chart</h3>
-        <canvas id="mylineChart" height="300"></canvas>
+        <canvas id="mylineChart"></canvas>
     </div>
 </div>
