--- a/main/templates/main/partials/charts.html
+++ b/main/templates/main/partials/charts.html
@@ -1,17 +1,17 @@
 <div id="showchart" class="hidden grid grid-cols-3 gap-8 m-10">  
-    <div class="bg-white rounded-xl p-6 w-full h-96">
-        <h3 id="titlechart" class="text-xl font-bold text-gray-800 mb-4">bar chart</h3>
-        <canvas id="barChart"></canvas>
+    <div id="bar-chart-box" class="bg-white rounded-xl p-6 w-full h-96">
+        <h3 id="titlechart" class="text-xl font-bold mb-4 bg-gradient-to-r from-black to-purple-600 bg-clip-text text-transparent">title</h3>
+        <canvas id="bar-chart-canvas"></canvas>
         <br>
          <!-- <div class="bg-black rounded-xl shadow-xl p-6 h-30"></div> -->
     </div>
-    <div id="barHorizontal" class="hidden bg-white rounded-xl p-6 h-96" >
-        <h3 id="titlechart2" class="text-xl font-bold text-gray-800 mb-4">bar chart</h3>
-        <canvas id="barChartHorizontal"></canvas>
+    <div id="bar-chart-box2" class="hidden bg-white rounded-xl p-6 h-96" >
+        <h3 id="titlechart2" class="text-xl font-bold text-gray-800 mb-4">title2</h3>
+        <canvas id="bar-chart-canvas2"></canvas>
          <!-- <div class="bg-black rounded-xl shadow-xl p-6 h-30"></div> -->
     </div>  
-    <div id="piechart" class="hidden bg-white rounded-xl p-6 w-full h-96">
-        <h3 class="text-xl font-bold text-gray-800 mb-4">Pie chart</h3>
-        <canvas id="mylineChart"></canvas>
+    <div id="line-chart-box" class="hidden bg-white rounded-xl p-6 w-full h-96">
+        <h3 id="titlechart3" class="text-xl font-bold text-gray-800 mb-4">title3</h3>
+        <canvas id="line-chart-canvas"></canvas>
     </div>
 </div>
