--- a/main/templates/main/partials/charts.html
+++ b/main/templates/main/partials/charts.html
@@ -20,16 +20,21 @@
         <canvas id="bar-chart-canvas3"></canvas>
          <!-- <div class="bg-black rounded-xl shadow-xl p-6 h-30"></div> -->
     </div>  
+
     <div id="bar-chart-box4" class="hidden bg-white rounded-xl p-6 h-96" >
         <h3 id="titlechart4" class="text-xl font-bold text-gray-800 mb-4">title4</h3>
         <canvas id="bar-chart-canvas4"></canvas>
          <!-- <div class="bg-black rounded-xl shadow-xl p-6 h-30"></div> -->
     </div>  
+
     <div id="bar-chart-box5" class="hidden bg-white rounded-xl p-6 h-96" >
         <h3 id="titlechart5" class="text-xl font-bold text-gray-800 mb-4">title5</h3>
         <canvas id="bar-chart-canvas5"></canvas>
          <!-- <div class="bg-black rounded-xl shadow-xl p-6 h-30"></div> -->
     </div>  
+
+    <div id="pie-charts-container" class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-4"></div>
+
     <div id="line-chart-box" class="hidden bg-white rounded-xl p-6 w-full h-96">
         <h3 id="titleline" class="text-xl font-bold text-gray-800 mb-4">titleline</h3>
         <canvas id="line-chart-canvas"></canvas>
