connect btn func del all files

--- a/main/templates/main/test.html
+++ b/main/templates/main/test.html
@@ -43,7 +43,9 @@
             <div class="flex justify-between items-center mb-4">
                 <span class="font-semibold text-gray-800 text-lg">ไฟล์ที่อัปโหลด</span>
                 <div>
-                    <span id="delete-all" class="text-red-600 py-1 px-3 rounded-full text-sm font-medium hover:bg-red-100 cursor-pointer">DELETE ALL</span>
+                    <button onclick="deleteAllFiles()">
+                        <span id="delete-all" class="text-red-600 py-1 px-3 rounded-full text-sm font-medium hover:bg-red-100 cursor-pointer">DELETE ALL</span>
+                    </button>
                     <span id="fileCount" class="bg-blue-100 text-blue-600 py-1 px-3 rounded-full text-sm font-medium">0</span>
                 </div>
             </div>
