--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -32,8 +32,8 @@
             </div>
 
             <div class="flex justify-center mt-3">   
-                <button onclick="analysisOpen()" id="analysisButton"
-                    class="bg-gradient-to-br from-purple-500 to-blue-700 text-white py-2 px-4 rounded-lg font-medium inline-flex items-center gap-2 hover:-translate-y-1 hover:shadow-lg transition-all">Analysis</button>
+                <button id="startButton"
+                    class="bg-gradient-to-br from-purple-500 to-blue-700 text-white py-2 px-4 rounded-lg font-medium inline-flex items-center gap-2 hover:-translate-y-1 hover:shadow-lg transition-all">START</button>
             </div>
 
             {% include 'main/test.html' %}
