--- a/main/templates/main/partials/charts.html
+++ b/main/templates/main/partials/charts.html
@@ -36,7 +36,15 @@
     <div id="pie-charts-container" class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-4"></div>
 
     <div id="line-chart-box" class="hidden bg-white rounded-xl p-6 w-full h-96">
-        <h3 id="titleline" class="text-xl font-bold text-gray-800 mb-4">titleline</h3>
+        <div>
+            <h3 id="titleline" class="text-xl font-bold text-gray-800 mb-4">titleline</h3>
+            <select id="period-select" class="px-3 py-2 rounded border">
+                <option value="day">Day</option>
+                <option value="week">Week</option>
+                <option value="month">Month</option>
+            </select>
+        </div>
         <canvas id="line-chart-canvas"></canvas>
     </div>
+    <br>
 </div>
