--- a/main/templates/main/partials/charts.html
+++ b/main/templates/main/partials/charts.html
@@ -36,16 +36,7 @@
     <div id="pie-charts-container" class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-4"></div>
 
     <div id="line-chart-box" class="hidden bg-white rounded-xl p-6 w-full h-96">
-        <div class="flex gap-4 text-xl font-bold text-gray-800 mb-4">
-            <h3 id="titleline" class="">titleline</h3>
-            <select id="mode" class="">
-                <option value="day">Daily</option>
-                <option value="week">Weekly</option>
-                <option value="Month">Monthly</option>
-            </select>
-            <!-- <span id="status"></span> -->
-        </div>
+        <h3 id="titleline" class="text-xl font-bold text-gray-800 mb-4">titleline</h3>
         <canvas id="line-chart-canvas"></canvas>
     </div>
-    <br>
 </div>
