add responsive design mobile

--- a/main/templates/main/test.html
+++ b/main/templates/main/test.html
@@ -37,9 +37,10 @@
         }
     </style>
 </head>
-<body class="bg-gray-100 p-4">
+<body class="bg-grey-100 p-4">
     <div class="max-w-2xl mx-auto bg-white rounded-lg shadow-lg">
-        <div id="fileList" class="flex-1 overflow-y-auto p-5">
+        <div id="fileList" class="flex-1 p-5">
+
             <div class="flex justify-between items-center mb-4">
                 <span class="font-semibold text-gray-800 text-lg">ไฟล์ที่อัปโหลด</span>
                 <div>
@@ -56,7 +57,7 @@
                 <div class="text-sm">ลากไฟล์มาวางหรือคลิกเพื่ออัปโหลด</div>
             </div>
             
-            <div id="fileItems" class="space-y-3 hidden max-h-screen overflow-y-auto pr-2">
+            <div id="fileItems" class="space-y-3 hidden h-48 overflow-y-auto pr-2 lg:h-screen">
                 <!-- ไฟล์จะแสดงที่นี่ -->
             </div>
         </div>
