--- a/main/templates/main/partials/analysis_actions.html
+++ b/main/templates/main/partials/analysis_actions.html
@@ -1,10 +1,10 @@
 <div id="Analysis_Actions" class="rounded-lg shadow-md p-6 m-10 bg-white">
-    <div class="flex justify-between">
-        <div class="content-center">
+    <div class="flex flex-col gap-4 lg:flex-row justify-between">
+        <div class="flex justify-center">
             <h2 id="title" class="text-2xl font-bold bg-gradient-to-r from-black to-purple-600 bg-clip-text text-transparent">Actions</h2>
         </div>
         
-        <div class="flex gap-6">
+        <div class="flex gap-6 justify-center">
             <div class="flex pt-3">
                 <label class="relative flex cursor-pointer">
                     <input type="checkbox" id="toggle" value="" class="sr-only peer">
@@ -30,7 +30,7 @@
 
     </div>
     <br>
-    <div class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-2 gap-4">
+    <div class="grid grid-cols md:grid-cols-2 lg:grid-cols-2 gap-4">
         {% for action in analysis_actions %}
             <button
                 class="analyze-btn flex flex-col items-center p-4 bg-{{ action.color }}-50 rounded-lg hover:bg-{{ action.color }}-100 transition-colors"
