--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -5,9 +5,9 @@
 <!-- Toast container -->
 <div id="toast-container" class="fixed top-4 right-4 z-50 space-y-2"></div>
 
-<div class="flex flex-col lg:flex-row">
+<div class="flex">
     <div id="col1" class="">
-        <div class="w-80 lg:bg-white border-r border-gray-200 shadow-md">
+        <div class="w-80 bg-white border-r border-gray-200 flex flex-col shadow-md">
             <div class="flex justify-between p-6 border-b border-gray-200 bg-gradient-to-br from-indigo-500 to-purple-700 text-white">
                 <h1 class="text-xl font-semibold flex items-center gap-3">📁 File Manager</h1>
                 <div id="btn-side" class="relative flex items-center justify-center cursor-pointer w-[40px] h-[40px]">
