--- a/main/templates/auth/logout.html
+++ b/main/templates/auth/logout.html
@@ -12,12 +12,20 @@
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="flex justify-between items-center h-16">
                     <!-- Logo/Brand -->
-                    <div class="flex items-center">
-                        <button onclick="forceReload()">
-                            <h1 class="text-2xl font-bold bg-gradient-to-r from-blue-600 to-purple-600 bg-clip-text text-transparent">
-                                DASHBOARD
-                            </h1>
-                        </button>
+                    <div class="flex">
+                        <div id="menu-off" class="transition-opacity duration-300 opacity-100 hover:bg-gray-300 hover:rounded-lg">
+                            <svg width="35" height="35" viewBox="0 0 24 24" fill="none">
+                            <path d="M5.5 6L11.5 12L5.5 18" stroke="black" stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M12.5 6L18.5 12L12.5 18" stroke="black" stroke-linecap="round" stroke-linejoin="round" />
+                            </svg>
+                        </div>
+                        <div class="flex items-center">
+                            <button onclick="forceReload()">
+                                <h1 class="text-2xl font-bold bg-gradient-to-r from-blue-600 to-purple-600 bg-clip-text text-transparent">
+                                    DASHBOARD
+                                </h1>
+                            </button>
+                        </div>
                     </div>
                     
                     <!-- User Info and Logout -->
