--- a/main/templates/main/test.html
+++ b/main/templates/main/test.html
@@ -57,7 +57,7 @@
                 <div class="text-sm">ลากไฟล์มาวางหรือคลิกเพื่ออัปโหลด</div>
             </div>
             
-            <div id="fileItems" class="space-y-3 hidden h-48 overflow-y-auto pr-2 lg:h-screen">
+            <div id="fileItems" class="space-y-3 hidden pr-2">
                 <!-- ไฟล์จะแสดงที่นี่ -->
             </div>
         </div>
