--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -7,8 +7,8 @@
 
 <div class="flex lg:flex-row">
     <div id="col1" class="">
-        <div class="w-full bg-white border-r border-gray-200 shadow-md">
-            <div class="flex justify-between p-6 border-b border-gray-200 bg-gradient-to-br from-indigo-500 to-purple-700 text-white">
+        <div class="w-screen h-screen bg-white border-r border-gray-200 shadow-md overflow-y-auto lg:w-96">
+            <div class="sticky top-0 z-20 flex justify-between p-6 border-b border-gray-200 bg-gradient-to-br from-indigo-500 to-purple-700 text-white">
                 <h1 class="text-xl font-semibold flex items-center gap-3">📁 File Manager</h1>
                 <div id="menu-on" class="relative flex items-center justify-center cursor-pointer w-[40px] h-[40px]">
                     <div id="side1" class="absolute transition-opacity duration-300 opacity-100 hover:bg-black hover:rounded-lg">
@@ -20,7 +20,7 @@
                 </div>
             </div>
 
-            <div class="p-5">
+            <div class="p-5 z-0">
                     <div id="uploadArea"
                         class="border-2 border-dashed border-gray-300 rounded-xl p-8 text-center transition-all cursor-pointer bg-gray-50 hover:border-blue-500 hover:bg-blue-50 hover:scale-105">
                         <div class="w-12 h-12 bg-gray-200 rounded-full flex items-center justify-center mx-auto mb-4 text-xl">
@@ -29,17 +29,16 @@
                         <div class="text-sm text-gray-500 mb-4">หรือเลือกไฟล์ที่ต้องการอัปโหลด</div>
                         <input type="file" id="fileInput" accept=".csv,.xls,.xlsx" name="files" class="hidden" multiple />
                     </div>
-            </div>
-
-            <div class="flex justify-center mt-3">   
-                <button id="startButton"
-                    class="bg-gradient-to-br from-purple-500 to-blue-700 text-white py-2 px-4 rounded-lg font-medium inline-flex items-center gap-2 hover:-translate-y-1 hover:shadow-lg transition-all">START</button>
-            </div>
-
-            {% include 'main/test.html' %}
-
-            <div class="p-4 border-t border-gray-200 bg-gray-50 text-center text-xs text-gray-500">
-                <div class="footer-text">รองรับไฟล์ Excel, CSV</div>
+                    <div class="flex justify-center mt-3">   
+                        <button id="startButton"
+                            class="bg-gradient-to-br from-purple-500 to-blue-700 text-white py-2 px-4 rounded-lg font-medium inline-flex items-center gap-2 hover:-translate-y-1 hover:shadow-lg transition-all">START</button>
+                    </div>
+        
+                    {% include 'main/test.html' %}
+        
+                    <!-- <div class="p-4 border-t border-gray-200 bg-gray-50 text-center text-xs text-gray-500">
+                        <div class="footer-text">รองรับไฟล์ Excel, CSV</div>
+                    </div> -->
             </div>
         </div>
     </div>
