--- a/main/templates/main/partials/analysis_actions.html
+++ b/main/templates/main/partials/analysis_actions.html
@@ -5,12 +5,12 @@
         </div>
         
         <div class="lg:flex gap-6 justify-center">
-            <div class="flex justify-center mb-4 lg:mb-0">
+            <div class="flex justify-center py-2">
                 <label class="relative flex cursor-pointer">
                     <input type="checkbox" id="toggle" value="" class="sr-only peer">
                     <div class="w-9 h-5 bg-gray-200 hover:bg-gray-300 peer-focus:outline-0  rounded-full peer transition-all ease-in-out duration-500 peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-4 after:w-4 after:transition-all dark:border-gray-600 peer-checked:bg-indigo-600 hover:peer-checked:bg-indigo-700 "></div>
                 </label>
-                <span class="ml-3 text-sm font-medium text-gray-600 ">Compare</span>
+                <span class="ml-3 text-sm font-medium text-gray-600">Compare</span>
             </div>
             <div class="">
                 <div class="flex outline-red-500">
