refactor: disable console logging and comment out welcome data section in index.html

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -44,7 +44,7 @@
     </div>
 
     <div id="col2" class="bg=[#f7f9fa] w-screen h-screen">
-        <div id="wealcomeData"
+        <!-- <div id="wealcomeData"
             class="h-screen flex-1 flex items-center justify-center bg-gradient-to-br from-purple-700 to-purple-900 text-white">
             <div class="text-center max-w-lg">
                 <div class="w-30 h-30 bg-white bg-opacity-10 rounded-full flex items-center justify-center mx-auto mb-6 text-5xl backdrop-blur-md">
@@ -55,8 +55,8 @@
                     สามารถลากไฟล์มาวางหรือคลิกเพื่อเลือกไฟล์ได้
                 </p>
             </div>
-        </div>
-        <div id="contentAnalysis" class="hidden overflow-y-auto h-[calc(100vh-64px)]">
+        </div> -->
+        <div id="contentAnalysis" class="overflow-y-auto h-[calc(100vh-64px)]">
 
             {% include 'auth/logout.html' %}
             <!-- Analysis Actions -->
